k8s/gatekeeper/policies/templates/deny-run-as-root.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyrunasroot
spec:
  crd:
    spec:
      names:
        kind: K8sDenyRunAsRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyrunasroot

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container must set runAsNonRoot: %v", [container.name])
        }
