k8s/gatekeeper/tests/cases/compliant-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: compliant-pod
  namespace: default
spec:
  containers:
    - name: app
      image: nginx:1.27
      securityContext:
        privileged: false
        runAsNonRoot: true
        allowPrivilegeEscalation: false
