k8s/gatekeeper/tests/cases/hostnetwork-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostnetwork-pod
  namespace: default
spec:
  hostNetwork: true
  containers:
    - name: app
      image: nginx:1.27
      securityContext:
        runAsNonRoot: true
