k8s/gatekeeper/tests/cases/privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-pod
  namespace: default
spec:
  containers:
    - name: app
      image: nginx:1.27
      securityContext:
        privileged: true
        runAsNonRoot: true
